# smurf

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  Collidable.cpp  Collidable.hpp  ContactParams.hpp  Dummy.cpp  Dummy.hpp  DynamicTransformation.cpp  DynamicTransformation.hpp  Frame.cpp  Frame.hpp  Geometry.hpp  Inertial.cpp  Inertial.hpp  Joint.cpp  Joint.hpp  Main.cpp  Material.cpp  Material.hpp  Motor.cpp  Motor.hpp  Robot.cpp  Robot.hpp  RotationalJoint.cpp  RotationalJoint.hpp  Sensor.cpp  Sensor.hpp  Smurf.cpp  Smurf.hpp  StaticTransformation.cpp  StaticTransformation.hpp  Transformation.cpp  Transformation.hpp  TranslationalJoint.cpp  TranslationalJoint.hpp  Visual.cpp  Visual.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  test_Dummy.cpp  test_robot.cpp
test/sample_smurfs/two_boxes_joined/smurf/: two_boxes.smurf  two_boxes_dynamic_joint.smurf  two_boxes_task.yml  two_boxes_with_motor.smurf  two_boxes_with_motor_motors.yml  two_boxes_with_sensor.smurf  two_boxes_with_sensors.yml
test/sample_smurfs/two_boxes_joined/urdf/: two_boxes.urdf  two_boxes_dynamic_joint.urdf
viz/: CMakeLists.txt  SmurfCollidable.hpp  SmurfCollidableViz.cpp  SmurfCollidableViz.hpp  SmurfVisual.hpp  SmurfVisualViz.cpp  SmurfVisualViz.hpp  manifest.xml  smurf_collidable-viz-qt5.pc.in  smurf_collidable-viz.pc.in  smurf_visual-viz-qt5.pc.in  smurf_visual-viz.pc.in  vizkit_plugin.rb
